about us section added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,32 @@
       </div>
     </div>
     <!-- ________________________________________ About ________________________________________ -->
+    <section class="about">
+      <div class="content-box">
+        <h2 class="heading">About Us</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab tenetur
+          maiores autem, dignissimos debitis amet, fugit iusto sapiente
+          eligendi, magni odit eveniet alias facilis expedita minima doloribus
+          quia repellat iste. Lorem ipsum dolor, sit amet consectetur
+          adipisicing elit. Unde cupiditate quod placeat corporis omnis debitis.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, eaque!
+          <br /><br />
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+          minus explicabo culpa beatae eius est, nesciunt dolores veniam, ea
+          rerum hic esse assumenda voluptates iure, deserunt modi animi aut.
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi
+          officiis consequatur, accusamus architecto illu
+        </p>
+        <br />
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum in
+          quam, qui suscipit consectetur earum praesentium numquam dolore omnis
+          aut?
+        </p>
+      </div>
+      <div class="img-box"></div>
+    </section>
     <!-- ________________________________________ Services ________________________________________ -->
     <!-- ________________________________________ Technology ________________________________________ -->
     <!-- ________________________________________ Client ________________________________________ -->
