services section added

--- a/index.html
+++ b/index.html
@@ -52,6 +52,30 @@
       <div class="img-box"></div>
     </section>
     <!-- ________________________________________ Services ________________________________________ -->
+    <section class="services">
+      <h2 class="heading">Our Services</h2>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. In laudantium
+        mollitia culpa! Iusto voluptatem corrupti nisi pariatur perspiciatis
+        unde ratione inventore beatae eius cum eveniet fugit ea aspernatur
+        veniam cumque doloribus consequuntur officiis omnis, et placeat
+        necessitatibus animi ipsa laborum!
+      </p>
+      <div class="container">
+        <div class="service-box">
+          <img src="./img/icon1.png" />
+          <h2>Design</h2>
+        </div>
+        <div class="service-box">
+          <img src="./img/icon2.png" />
+          <h2>Development</h2>
+        </div>
+        <div class="service-box">
+          <img src="./img/icon3.png" />
+          <h2>Branding</h2>
+        </div>
+      </div>
+    </section>
     <!-- ________________________________________ Technology ________________________________________ -->
     <!-- ________________________________________ Client ________________________________________ -->
     <!-- ________________________________________ Testimonials ________________________________________ -->
