technology section added

--- a/index.html
+++ b/index.html
@@ -77,6 +77,22 @@
       </div>
     </section>
     <!-- ________________________________________ Technology ________________________________________ -->
+    <section class="technology">
+      <div class="content-box">
+        <h2 class="heading">We use cutting edge technology</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum
+          inventore cupiditate totam doloremque beatae, perferendis quod
+          perspiciatis accusantium explicabo molestiae laborum quo aliquid quasi
+          sunt consectetur itaque blanditiis! Repellendus minima nihil dicta
+          perferendis totam explicabo neque, dolore porro, quam consequatur
+          optio nesciunt, vero ut maiores.
+        </p>
+      </div>
+      <div class="img-box">
+        <img src="./img/tech.png" />
+      </div>
+    </section>
     <!-- ________________________________________ Client ________________________________________ -->
     <!-- ________________________________________ Testimonials ________________________________________ -->
     <!-- ________________________________________ Contact ________________________________________ -->
