--- a/index.html
+++ b/index.html
@@ -94,7 +94,23 @@
       </div>
     </section>
     <!-- ________________________________________ Client ________________________________________ -->
+    <section class="client">
+      <h2 class="heading">Our Clients</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut consequatur,
+        velit ullam, itaque officiis similique enim perspiciatis quam
+        consequuntur ad laboriosam provident delectus. Cum, quia sint ducimus
+        veniam ipsum odio eum reprehenderit asperiores minima nam.
+      </p>
+      <div class="img-box">
+        <img src="./img/brand1.png" />
+        <img src="./img/brand2.png" />
+        <img src="./img/brand3.png" />
+        <img src="./img/brand4.png" />
+      </div>
+    </section>
     <!-- ________________________________________ Testimonials ________________________________________ -->
     <!-- ________________________________________ Contact ________________________________________ -->
+    <!-- ________________________________________ Footer ________________________________________ -->
   </body>
 </html>
