testimonials section added

--- a/index.html
+++ b/index.html
@@ -110,6 +110,33 @@
       </div>
     </section>
     <!-- ________________________________________ Testimonials ________________________________________ -->
+    <section class="testimonials">
+      <h2 class="heading">What Our Clients Say</h2>
+      <div class="container ">
+        <div class="content-box">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid
+            tenetur, non debitis quo corrupti, rerum, totam nulla reprehenderit
+            minus excepturi cumque sint! Expedita quos non esse sequi ratione,
+            officiis dolore minus explicabo impedit fugiat fuga distinctio
+            veniam.
+          </p>
+          <br />
+          <h3>Someone Famous</h3>
+        </div>
+        <div class="content-box">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid
+            tenetur, non debitis quo corrupti, rerum, totam nulla reprehenderit
+            minus excepturi cumque sint! Expedita quos non esse sequi ratione,
+            officiis dolore minus explicabo impedit fugiat fuga distinctio
+            veniam.
+          </p>
+          <br />
+          <h3>Someone Famous</h3>
+        </div>
+      </div>
+    </section>
     <!-- ________________________________________ Contact ________________________________________ -->
     <!-- ________________________________________ Footer ________________________________________ -->
   </body>
