contact section added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="#" class="logo">Oli CT</a>
         <div class="toggle"></div>
       </header>
-      <img src="./img/bg.jpg" alt="background" />
+      <img src="./img/bg-b.jpg" alt="background" />
       <div class="content">
         <h2>Success by Design</h2>
         <p>
@@ -138,6 +138,38 @@
       </div>
     </section>
     <!-- ________________________________________ Contact ________________________________________ -->
+    <section class="contact">
+      <h2 class="heading">Contact Us</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam maxime
+        animi, officia consectetur molestias sint aspernatur consequuntur
+        voluptas magnam provident veritatis placeat sequi reiciendis dolorum.
+        Illum non corrupti, velit suscipit facere laborum tenetur, dicta quos
+        dolorum, consectetur temporibus accusantium delectus.
+      </p>
+    </section>
+    <section class="about">
+      <div class="content-box redbg">
+        <div class="form">
+          <div class="input-box">
+            <input type="text" placeholder="Full Name" />
+          </div>
+          <div class="input-box">
+            <input type="email" placeholder="Email Address" />
+          </div>
+          <div class="input-box">
+            <input type="text" placeholder="Mobile Number" />
+          </div>
+          <div class="input-box">
+            <textarea placeholder="Write your message here"></textarea>
+          </div>
+          <div class="input-box">
+            <input type="submit" value="Send" />
+          </div>
+        </div>
+      </div>
+      <div class="img-box-2"></div>
+    </section>
     <!-- ________________________________________ Footer ________________________________________ -->
   </body>
 </html>
