--- a/index.html
+++ b/index.html
@@ -171,5 +171,28 @@
       <div class="img-box-2"></div>
     </section>
     <!-- ________________________________________ Footer ________________________________________ -->
+    <footer>
+      <p>
+        Copyright &copy; 2020 by OCT Tech. Web page by
+        <a
+          href="https://github.com/olivercastroteran"
+          target="_blank"
+          class="me"
+          >Oliver Castro Teran</a
+        >. All rights reserved
+      </p>
+      <ul>
+        <p>Follow us on:</p>
+        <li>
+          <a href="#"><img src="./img/facebook.png"/></a>
+        </li>
+        <li>
+          <a href="#"><img src="./img/twitter.png"/></a>
+        </li>
+        <li>
+          <a href="#"><img src="./img/linkedin.png"/></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
